Bug 399586 - Picking color from screen is missing in Text dialogue after merging the new color palette codes
Summary: Picking color from screen is missing in Text dialogue after merging the new c...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-10-10 01:23 UTC by Tyson Tan
Modified: 2018-10-15 06:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Suggestion on Toolbar Color Picker button implementaion (33.50 KB, image/png)
2018-10-10 01:23 UTC, Tyson Tan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2018-10-10 01:23:59 UTC
Created attachment 115531 [details]
Suggestion on Toolbar Color Picker button implementaion

SUMMARY
Since the merging of the new color palette codes:
https://binary-factory.kde.org/job/Krita_Nightly_Appimage_Build/245/
The ability to pick color from screen is now missing. I think this is a very important function as it provides quick and flexible solution to text color matching with other elements in a picture. I wish it can be re-implemented as a button on the toolbar of Text dialogue.

Tested on: krita-4.2.0-pre-alpha-715ad13-x86_64.appimage

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 mvowada 2018-10-10 21:27:59 UTC
Hi Tyson and thanks for the report. 
I'm marking this as "Confirmed".
Comment 2 Emmet O'Neill 2018-10-14 13:20:56 UTC
Git commit e9b382d7ffd44c82f526171b1383c9f100c3426d by Emmet O'Neill.
Committed on 14/10/2018 at 13:20.
Pushed by emmetoneill into branch 'master'.

Restored ability to pick colors from the Text Editor.

Since the merging of the new palette branch, users lost the ability to
pick colors from within the SVG Text Editor. This has been fixed.

Also, a new parameter was added to the KisScreenColorPicker's
constructor which allows the owning widget to control whether "color
info labels" are shown or hidden.

Finally, I did some minor cleanup of unused code and formatting.

M  +2    -2    libs/ui/CMakeLists.txt
M  +19   -15   libs/ui/widgets/KisScreenColorPicker.cpp
M  +1    -2    libs/ui/widgets/KisScreenColorPicker.h
M  +1    -1    libs/widgets/KisDlgInternalColorSelector.cpp
M  +1    -2    libs/widgets/KisDlgInternalColorSelector.h
M  +11   -3    plugins/tools/svgtexttool/SvgTextEditor.cpp
M  +3    -6    plugins/tools/svgtexttool/SvgTextEditor.h
M  +10   -0    plugins/tools/svgtexttool/SvgTextTool.action
M  +1    -0    plugins/tools/svgtexttool/svgtexttool.xmlgui

https://commits.kde.org/krita/e9b382d7ffd44c82f526171b1383c9f100c3426d
Comment 3 Tyson Tan 2018-10-15 00:54:16 UTC
Thank you Emmet! You didn't just "restore" the function, but made it so much easier to use, even better than GIMP now. Just want to let you know this is a life saver for me and I can't thank you enough for this!

:D
Comment 4 Emmet O'Neill 2018-10-15 06:01:33 UTC
Glad to hear it Tyson! =]