Restored ability to pick colors from the Text Editor.

Since the merging of the new palette branch, users lost the ability to
pick colors from within the SVG Text Editor. This has been fixed.

Also, a new parameter was added to the KisScreenColorPicker's
constructor which allows the owning widget to control whether "color
info labels" are shown or hidden.

Finally, I did some minor cleanup of unused code and formatting.

BUG:399586